Fixed wrong spellings

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="intro" >
               <h1 data-aos="fade-down" data-aos-duration="1000">ABOUT ME</h1> <br> <br>
-              <h5 data-aos="fade-left" data-aos-duration="1500">I am a Full Stack Wed Development Student in KodeGo</h5> <br>
+              <h5 data-aos="fade-left" data-aos-duration="1500">I am a Full Stack Web Development Student in KodeGo</h5> <br>
               <p data-aos="fade-up-left" data-aos-duration="1500">After finishing Industrial Electronics Technology, I decided to join the IT world. I started as a Product Specialist in a business provider company up to embracing the role of a technical support. I took the opportunity to practice Web Development to broaden my knowledge and skills.</p> <br>
               <a href="#" class="btn btn-info rounded-0" role="button" data-aos="zoom-in" data-aos-duration="1000">Download CV</a>
 
@@ -104,41 +104,41 @@
     <div class="container-fluid" id="skills">
         <div class="container text-center skills">
             <h1 data-aos="fade-down" data-aos-duration="1000">My Skills</h1>
-            <ul class="d-flex justify-content-center flex-wrap" data-aos="fade-right"
+            <ul class="d-flex justify-content-center" data-aos="fade-right"
             data-aos-offset="300"
             data-aos-easing="ease-in-sine">
                 <li>
                     <a href="">
-                        <img src="./images/html.png" alt="" class="img-fluid">
+                        <img src="./images/html.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/css.png" alt="" class="img-fluid">
+                        <img src="./images/css.png" alt="" >
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/bootstrap.png" alt="" class="img-fluid">
+                        <img src="./images/bootstrap.png" alt="">
                     </a>
                 </li>
             </ul>
-            <ul class="d-flex justify-content-center flex-wrap" data-aos="fade-left"
+            <ul class="d-flex justify-content-center" data-aos="fade-left"
             data-aos-offset="300"
             data-aos-easing="ease-in-sine">
                 <li>
                     <a href="">
-                        <img src="./images/sass.png" alt="" class="img-fluid">
+                        <img src="./images/sass.png" alt="" >
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/js.png" alt="" class="img-fluid">
+                        <img src="./images/js.png" alt="" >
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/react.png" alt="" class="img-fluid">
+                        <img src="./images/react.png" alt="">
                     </a>
                 </li>
             </ul>
