--- a/index.html
+++ b/index.html
@@ -99,51 +99,53 @@
 
             </div>
         </div>
-    </div>
 
-    <div class="container-fluid" id="skills">
-        <div class="container text-center skills">
-            <h1 data-aos="fade-down" data-aos-duration="1000">My Skills</h1>
-            <ul class="d-flex justify-content-center" data-aos="fade-right"
-            data-aos-offset="300"
-            data-aos-easing="ease-in-sine">
-                <li>
-                    <a href="">
-                        <img src="./images/html.png" alt="">
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/css.png" alt="" >
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/bootstrap.png" alt="">
-                    </a>
-                </li>
-            </ul>
-            <ul class="d-flex justify-content-center" data-aos="fade-left"
-            data-aos-offset="300"
-            data-aos-easing="ease-in-sine">
-                <li>
-                    <a href="">
-                        <img src="./images/sass.png" alt="" >
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/js.png" alt="" >
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <img src="./images/react.png" alt="">
-                    </a>
-                </li>
-            </ul>
+        <div class="container-fluid" id="skills">
+            <div class="container text-center skills" >
+                <h1 data-aos="fade-down" data-aos-duration="1000">My Skills</h1>
+                <ul class="d-flex justify-content-center" data-aos="fade-right"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
+                    <li>
+                        <a href="">
+                            <img src="./images/html.png" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./images/css.png" alt="" >
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./images/bootstrap.png" alt="">
+                        </a>
+                    </li>
+                </ul>
+                <ul class="d-flex justify-content-center" data-aos="fade-left"
+                data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
+                    <li>
+                        <a href="">
+                            <img src="./images/sass.png" alt="" >
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./images/js.png" alt="" >
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./images/react.png" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
+
+  
 
     <div class="container-fluid" id="page3">
         <div class="container text-center works">
@@ -261,7 +263,7 @@
     </div>
 
       <div class="container-fluid" id="page5">
-        <div class="container d-flex">
+        <div class="container d-flex contact">
             <div class="contact-left">
                 <h2 data-aos="fade-down" data-aos-duration="1000">Let's Make something new, different great together. <span>Just Say Hello</span></h2> <br>
                 <ul>
